@@ -30,6 +30,9 @@ V1.67
 + Added "Xerox" button to seq editor (named that until someone suggests a good 5 letter word for duplicate) [Alk] (poolog)
 + Added Swing Fill command (pooplog)
 ! Increased max lines/pattern to 256 (pooplog)
+! Basic Mousewheel support for pattern edit mode (pooplog)
+* Fixed song bpm being misreported to machines if they used FF command
+
 
 V1.66
 -----
